# OpenGL_Template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
